2005-04-13  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Formatter.h, Atlas/Formatter.cpp: Implement simple formatting
	  and add an API for specifying the indent spacing.

	* Atlas/Utilities/atlas_convert.cpp: Clean up command line processing,
	  handle codec options better, and add options to control formatting
	  if required.

2005-04-12  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Message/Element.h, configure.ac: Make Atlas::Message::Element
	  typedefs private permanently.

	* Atlas/Formatter.cpp, Atlas/Formatter.h, Atlas/Makefile.am: New
	  class that acts as an adaptor to a Bridge and a stream, outputing
	  formatting characters to the stream as messages are passed through
	  it.

2005-03-03  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Bridge.h, Atlas/Bridge.cpp,
	  Atlas/Negotiate.h, Atlas/Negotiate.cpp: Add virtual destructors
	  to Bridge and Negotiate.

	* tests/Objects/objects2.cpp: Fix some messy casts, and replace
	  with the correct casts or conversions.

2005-01-12  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.5.92, Interface version 0.

2004-12-31  Al Riddoch  <alriddoch@zepler.org>

	* atlas-cpp.spec.in: Update spec with License URL Package Vendor
	  and Distribution tags.

2004-12-23  Al Riddoch  <alriddoch@zepler.org>

	* benchmark/Makefile.am: Remove SmartPtr_Move benchmark from the
	  tests, as its no longer relevant, and does not build.

2004-11-19  Ron Steinke <rsteinke@w-link.net>

	* Atlas/Codecs/Bach.cpp, Atlas/Codecs/Bach.h: Made
	  comment parsing properly part of the codec state.

2004-11-04  Al Riddoch  <alriddoch@zepler.org>

	* tests/Objects/custom_ops.cpp: Correctly set parents of custom
	  wield op to "wield" not "action".

2004-11-04  Al Riddoch  <alriddoch@zepler.org>

	* tests/Objects/objects1.cpp: Fix a redundant include.

	* tests/Objects/custom_ops.cpp: Add a test demonstrating the
	  definition of a custom op class.

2004-10-13  Al Riddoch  <alriddoch@zepler.org>

	* Release 0.5.91.
