@@ -1,6 +1,7 @@
 aclocal.m4
-autom4te-*.cache
+autom4te.cache
 config.cache
+config.h
 config.h.in
 config.log
 config.status
@@ -12,3 +13,4 @@ Makefile
 Makefile.in
 simple_client
 simple_server
+stamp-h1
