@@ -1,42 +1,0 @@
-dnl Initialise autoconf
-
-AC_INIT(simple_server.cpp)
-
-dnl Initialise automake
-
-AM_INIT_AUTOMAKE("atlas_cpp_tutorial", "0.0.0")
-
-dnl Need libtool
-
-AM_PROG_LIBTOOL
-
-dnl Test for C++ compiler
-
-AC_PROG_CC
-AC_PROG_CXX
-
-CFLAGS='-Wall -g -I/usr/X11R6/include'
-CXXFLAGS='-Wall -g -I/usr/X11R6/include'
-LIBS='-L/usr/X11R6/lib -L/usr/local/lib'
-
-AC_PREFIX_DEFAULT("/usr/local")
-AC_CHECK_FUNC(cos,,[AC_CHECK_LIB(m,cos)])
-
-dnl Test for WorldForge Atlas Libraries
-
-ATLAS_VERSION=0.5.0
-AM_PATH_ATLAS($ATLAS_VERSION)
-CFLAGS="$CFLAGS $ATLAS_CFLAGS"
-CPPFLAGS="$CPPFLAGS $ATLAS_CFLAGS"
-CXXFLAGS="$CXXFLAGS $ATLAS_CFLAGS"
-LIBS="$LIBS $ATLAS_LIBS"
-
-AC_LANG_CPLUSPLUS
-AC_REQUIRE_CPP
-
-AC_CHECK_LIB(socket++,main)
-
-dnl Generate files
-AC_OUTPUT([
-	Makefile
-])
